Sec17_Chap172-XXX: code optimization